tests/ui/validate_min_length_i32.stderr
error[E0308]: mismatched types
 --> $DIR/validate_min_length_i32.rs:5:26
  |
5 |     #[validate(min_length = -1 as i32)]
  |                             ^^^^^^^^^ expected `usize`, found `i32`
  |
help: you can convert an `i32` to `usize` and panic if the converted value wouldn't fit
  |
5 |     #[validate(min_length = (-1 as i32).try_into().unwrap())]
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
